--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-slick": "^0.30.3",
+    "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
