--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.11",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
